--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   toastification: ^3.0.3
   http: ^1.5.0
+  flutter_dotenv: ^6.0.0
+  html: ^0.15.6
   
 
 dev_dependencies:
